--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+ADMIN_ROLE_ID=1
+ADMIN_SEED_COUNT=10
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
@@ -14,6 +16,8 @@ DB_PORT=3306
 DB_DATABASE=officeflow
 DB_USERNAME=root
 DB_PASSWORD=
+
+EMPLOYEE_SEED_COUNT=20
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -50,6 +54,9 @@ PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
+
+USER_ROLE_ID=2
+USER_SEED_COUNT=60
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
