--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.18",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
