--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "react-datepicker": "^4.14.1",
+        "react-paginate": "^8.2.0"
     }
 }
